--- a/02 - Starter Files and Tooling Setup/test-START.html
+++ b/02 - Starter Files and Tooling Setup/test-START.html
@@ -13,11 +13,12 @@
     font-size: 50px;
     border-bottom: 10px solid var(--yellow);
     color: var(--black);
+    font-size: 50px;
   }
 </style>
 
 <body>
-  <p>Hello!</p>
+<p>Hello!</p>
 </body>
 
 </html>
