--- a/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
+++ b/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
@@ -9,6 +9,28 @@
 </head>
 
 <body>
+<div class="container">
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+  <div class="item">hey</div>
+</div>
+<div>
+  <style>
+    .container {
+      display: grid;
+      grid-template-columns: 200px 500px;
+      grid-template-rows: 200px 100px 400px;
+      grid-gap: 20px;
+    }
+  </style>
+</div>
 
 </body>
 
